Fix footer background and select on mobile

--- a/style.css
+++ b/style.css
@@ -305,8 +305,12 @@ footer .footer-content a {
 
 @media all and (max-width: 1150px) {
   footer {
-    background: linear-gradient(to top, #535382, #2d2c55);
+    background-image: none;
     height: 100%;
+  }
+
+  footer select {
+    min-width: 100px;
   }
 
   footer .info {
